--- a/form-page.html
+++ b/form-page.html
@@ -322,10 +322,10 @@
         <div class="footer-top">
             <a class="go-to-top" href="#">
                 <span>TOP</span>
-                <img src="./images/icon-HomePage/sheep.png" alt="紐西蘭旅遊網回首頁icon">
+                <img src="./images/icon-homepage/sheep.png" alt="紐西蘭旅遊網回首頁icon">
             </a>
             <div class="info">
-                <a href="./index.html"><img src="./Images/logo.png" alt="KiwiTours紐西蘭之旅的logo"></a>
+                <a href="./index.html"><img src="./images/logo.png" alt="KiwiTours紐西蘭之旅的logo"></a>
                 <p>電話: <a href="javascript:;">+64 9 520 5531</a></p>
                 <p>信箱: <a href="javascript:;">info@kiwitours.com</a></p>
                 <p>地址: <a href="javascript:;">Gillies Ave Office Park Suite 101, 27 Gillies Ave, Newmarket, Auckland 1023, New Zealand</a></p>
@@ -380,10 +380,10 @@
                 <p>您可以私訊[TibaMe-前端設計工程師養成班]，後續會由專人協助處理。</p>
             </div>
             <ul>
-                <li><a href="javascript:;"><img src="./Images/ICON-HomePage/instagram.png" alt="紐西蘭之旅的官方ig連結"></a></li>
-                <li><a href="javascript:;"><img src="./Images/ICON-HomePage/facebook.png" alt="紐西蘭之旅的官方臉書連結"></a></li>
-                <li><a href="javascript:;"><img src="./Images/ICON-HomePage/youtube.png" alt="紐西蘭之旅的官方Youtube連結"></a></li>
-                <li><a href="javascript:;"><img src="./Images/ICON-HomePage/line.png" alt="紐西蘭之旅的官方Line帳號連結"></a></li>
+                <li><a href="javascript:;"><img src="./images/icon-homeoage/instagram.png" alt="紐西蘭之旅的官方ig連結"></a></li>
+                <li><a href="javascript:;"><img src="./images/icon-homepage/facebook.png" alt="紐西蘭之旅的官方臉書連結"></a></li>
+                <li><a href="javascript:;"><img src="./images/icon-homepage/youtube.png" alt="紐西蘭之旅的官方Youtube連結"></a></li>
+                <li><a href="javascript:;"><img src="./images/icon-homepage/line.png" alt="紐西蘭之旅的官方Line帳號連結"></a></li>
             </ul>
         </div>
     </footer>
