--- a/discover-nz.html
+++ b/discover-nz.html
@@ -70,7 +70,7 @@
                     </ul>
     
                 </li>
-                <li><a href="javascript:;">FAQ專欄</a></li>
+                <li><a href="./faq.html">FAQ專欄</a></li>
                 <li><a href="javascript:;">聯繫我們</a></li>
             </ul>
             <ul class="login-main-nav">
