--- a/travel-item.html
+++ b/travel-item.html
@@ -69,7 +69,7 @@
                     </ul>
     
                 </li>
-                <li><a href="javascript:;">FAQ專欄</a></li>
+                <li><a href="./faq.html">FAQ專欄</a></li>
                 <li><a href="javascript:;">聯繫我們</a></li>
             </ul>
             <ul class="login-main-nav">
