--- a/form-page.html
+++ b/form-page.html
@@ -70,16 +70,16 @@
     
                 </li>
                 <li><a href="./faq.html">FAQ專欄</a></li>
-                <li><a href="javascript:;">聯繫我們</a></li>
+                <li><a href="./contact-us.html">聯繫我們</a></li>
             </ul>
             <ul class="login-main-nav">
                 <li>
-                    <a class="login" href="javascript:;">
+                    <a class="login" href="./log-in.html">
                         <img src="./images/icon-homepage/login.png" alt="紐西蘭旅遊網站會員登入">
                     </a>
                     <ul class="login-sub-nav">
-                        <li><a href="javascript:;">登入</a></li>
-                        <li><a href="javascript:;">建立帳號</a></li>
+                        <li><a href="./log-in.html">登入</a></li>
+                        <li><a href="./log-in.html">建立帳號</a></li>
                     </ul>
                 </li>    
             </ul>
@@ -99,7 +99,7 @@
                 </li>
                 <li><a href="./travel-category.html">冒險刺激</a></li>
                 <li><a href="./travel-item.html">7天北島冒險旅</a></li>
-                <li><a href="javascript:;">訂單輸入</a></li>
+                <li><a href="./form-page.html">訂單輸入</a></li>
             </ul>
         </div>
         <!-- 左側內容區塊 -->
@@ -388,7 +388,7 @@
         </div>
     </footer>
     <!-- Footer區塊結束 -->
-    <script src="./js/travel-item.js"></script>
+
 </body>
 </html>
     
