--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Header區塊 -->
     <header>
         <nav>
-            <a class="logo" href="javascript:;">
+            <a class="logo" href="./index.html">
                 <img src="./images/logo.png" alt="紐西蘭旅遊網的logo">
             </a>
             <ul class="main-nav">
@@ -70,16 +70,16 @@
     
                 </li>
                 <li><a href="./faq.html">FAQ專欄</a></li>
-                <li><a href="javascript:;">聯繫我們</a></li>
+                <li><a href="./contact-us.html">聯繫我們</a></li>
             </ul>
             <ul class="login-main-nav">
                 <li>
-                    <a class="login" href="javascript:;">
+                    <a class="login" href="./log-in.html">
                         <img src="./images/icon-homepage/login.png" alt="紐西蘭旅遊網站會員登入">
                     </a>
                     <ul class="login-sub-nav">
-                        <li><a href="javascript:;">登入</a></li>
-                        <li><a href="javascript:;">建立帳號</a></li>
+                        <li><a href="./log-in.html">登入</a></li>
+                        <li><a href="./log-in.html">建立帳號</a></li>
                     </ul>
                 </li>    
             </ul>
