--- a/form-page.html
+++ b/form-page.html
@@ -74,12 +74,12 @@
             </ul>
             <ul class="login-main-nav">
                 <li>
-                    <a class="login" href="./log-in.html">
+                    <a class="login" href="./log-in.html" target="_blank">
                         <img src="./images/icon-homepage/login.png" alt="紐西蘭旅遊網站會員登入">
                     </a>
                     <ul class="login-sub-nav">
-                        <li><a href="./log-in.html">登入</a></li>
-                        <li><a href="./log-in.html">建立帳號</a></li>
+                        <li><a href="./log-in.html" target="_blank">登入</a></li>
+                        <li><a href="./log-in.html" target="_blank">建立帳號</a></li>
                     </ul>
                 </li>    
             </ul>
@@ -274,10 +274,10 @@
                                 </ul>
                                 <div class="button">
                                     <p class="save">
-                                        <a href="javascript:;">儲存並加入收藏</a>
+                                        <a href="./log-in.html" target="_blank">儲存並加入收藏</a>
                                     </p>
                                     <p class="pay">
-                                        <a href="javascript:;">確認訂單及付款</a>
+                                        <a href="./log-in.html" target="_blank">確認訂單及付款</a>
                                     </p>
                                 </div>   
                             </div>
