--- a/discover-nz.html
+++ b/discover-nz.html
@@ -75,12 +75,12 @@
             </ul>
             <ul class="login-main-nav">
                 <li>
-                    <a class="login" href="./log-in.html">
+                    <a class="login" href="./log-in.html" target="_blank">
                         <img src="./images/icon-homepage/login.png" alt="紐西蘭旅遊網站會員登入">
                     </a>
                     <ul class="login-sub-nav">
-                        <li><a href="./log-in.html">登入</a></li>
-                        <li><a href="./log-in.html">建立帳號</a></li>
+                        <li><a href="./log-in.html" target="_blank">登入</a></li>
+                        <li><a href="./log-in.html" target="_blank">建立帳號</a></li>
                     </ul>
                 </li>    
             </ul>
