--- a/log-in.html
+++ b/log-in.html
@@ -16,7 +16,7 @@
 <body>
     <main>
         <div class="bigBox">
-            <h1>登錄介面</h1>
+            <h1>登入介面</h1>
             
             <div class="inputBox">
                 <div class="inputText">
