--- a/form-page.html
+++ b/form-page.html
@@ -286,7 +286,7 @@
                 </div>
             </section>
             <section class="main-right">
-                <div class="main-detail">
+                <div class="key-notes">
                     <h5>為什麼要選擇KIWI TOUR</h5>
                     <div class="content-detail">
                         <div class="detail-item">
@@ -299,7 +299,7 @@
                         </div>
                         <div class="detail-item">
                             <img src="./images/form-page/check-icon.png" alt="為什麼要選擇kiwitour的icon">
-                            <p>明星導覽:我們的導覽員都是100%當地紐西蘭人，有多年帶團經驗，並也熱愛紐西蘭/p>
+                            <p>明星導覽:我們的導覽員都是100%當地紐西蘭人，有多年帶團經驗，並也熱愛紐西蘭</p>
                         </div>
                         <div class="detail-item">
                             <img src="./images/form-page/check-icon.png" alt="為什麼要選擇kiwitour的icon">
@@ -388,7 +388,7 @@
         </div>
     </footer>
     <!-- Footer區塊結束 -->
-
+    <script src="./js/form-page.js"></script>
 </body>
 </html>
     
