--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                     </figure>
                 </li>
             </ul>
-            <div class="goto">
+            <div class="viewall-schedule">
                 <a href="javascript:;">查看所有活動</a>
             </div>
         </section>
