--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                             <span>4.5</span>
                         </p>
                         <p class="price">價格 <span>$1,399</span> NZD</p>
-                        <p class="description">深入了解紐西蘭的毛利戰士文化、欣賞傳統藝術舞蹈表演–古毛利人開戰前用來鼓舞戰士的戰舞文化(Haka舞)，感受傳統手工木製建築及品嘗特有傳統特色美食。</p>
+                        <p class="description">深入了解紐西蘭的毛利文化、欣賞傳統藝術舞蹈表演–毛利人開戰前用來鼓舞的戰舞文化(Haka舞)，感受傳統手工木製建築及品嘗特有傳統特色美食。</p>
                         <p class="more">
                             <a href="./travel-item.html">探索更多</a>
                         </p>
