--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <figure>
                         <img src="./images/icon-homepage/logo_line3.png" alt="紐西蘭之旅品牌特色是彈性預約制度的icon">
                         <figcaption>彈性預約制度</figcaption>
-                        <blockquote>在您正式出發的30天以前，您可以無限制的透過會員登入去隨時免費更改或加購任何行程。</blockquote>
+                        <blockquote>在正式出發的30天以前，您可以無限制的透過會員登入去隨時免費更改或加購任何行程。</blockquote>
                     </figure>
                 </li>
                 <li>
