--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     </ul>
     
                 </li>
-                <li><a href="./faq.html">FAQ專欄</a></li>
-                <li><a href="./contact-us.html">聯繫我們</a></li>
+                <li><a class="cool-link" href="./faq.html">FAQ專欄</a></li>
+                <li><a class="cool-link" href="./contact-us.html">聯繫我們</a></li>
             </ul>
             <ul class="login-main-nav">
                 <li>
@@ -117,7 +117,7 @@
                     <figure>
                         <img src="./images/icon-homepage/logo_line3.png" alt="紐西蘭之旅品牌特色是彈性預約制度的icon">
                         <figcaption>彈性預約制度</figcaption>
-                        <blockquote>在正式出發的30天以前，您可以無限制的透過會員登入去隨時免費更改或加購任何行程。</blockquote>
+                        <blockquote>在您正式出發的30天以前，您可以無限制的透過會員登入去隨時免費更改或加購任何行程。</blockquote>
                     </figure>
                 </li>
                 <li>
