--- a/travel-item.html
+++ b/travel-item.html
@@ -69,8 +69,8 @@
                     </ul>
     
                 </li>
-                <li><a href="./faq.html">FAQ專欄</a></li>
-                <li><a href="./contact-us.html">聯繫我們</a></li>
+                <li><a class="cool-link" href="./faq.html">FAQ專欄</a></li>
+                <li><a class="cool-link" href="./contact-us.html">聯繫我們</a></li>
             </ul>
             <ul class="login-main-nav">
                 <li>
